# rimmich-uploader

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: config.rs  main.rs
