[package]
name = "rimmich-uploader"
version = "0.1.0"
edition = "2024"
description = "A simple Rust-based CLI tool to upload photos and videos to your Immich server."
authors = ["xufang"]
repository = "https://github.com/xufanglin/rimmich-uploader"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.13", default-features = false, features = [
    "json",
    "multipart",
    "stream",
    "rustls-tls",
] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
walkdir = "2.5"
chrono = { version = "0.4", features = ["serde"] }
mime_guess = "2.0"
indicatif = "0.18.3"
log = "0.4"
env_logger = "0.11"
url = "2.5"
futures = "0.3"
toml = "0.9.10+spec-1.1.0"
directories = "6.0.0"
